--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,7 +3,10 @@ p {
   font-family: "Inter", sans-serif;
   font-size: 1.2rem;
 }
-
+a {
+  text-decoration: none;
+  color: white;
+}
 /* HEADER */
 
 .header {
@@ -239,8 +242,8 @@ p {
 
 .yellow-dot {
   display: inline;
-  width: 1rem;
-  height: 1rem;
+  width: 0.5rem;
+  height: 0.5rem;
   background-color: #e5e548;
   border-radius: 50%;
   margin-right: 0.5rem;
@@ -258,7 +261,6 @@ p {
   border: none;
   cursor: pointer;
   outline: none;
-  padding: 0;
 }
 
 .hamburger,
@@ -308,12 +310,21 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 1em;
 }
+.subbar-menu {
+  height: 8rem;
+  position: fixed;
+  bottom: 0;
+  right: 0;
 
+  z-index: 10;
+}
+/* padding-left positions the menu text from left edge */
 .menu-links {
   font-size: 4rem;
   line-height: 1.5;
+  padding-left: 10rem;
 }
 
 .menu-links a,
@@ -355,6 +366,7 @@ p {
 .menu-links a::after {
   bottom: 0;
   right: 0;
+
   transform-origin: right;
 }
 
@@ -367,7 +379,10 @@ p {
 }
 
 .social-links {
-  /* Add styles for the social links container here */
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  padding-right: 20rem;
 }
 
 .graphics {
@@ -441,13 +456,27 @@ p {
     width: 100%;
     height: auto;
   }
+  .side-menu {
+    display: flex;
+    flex-direction: column;
+  }
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-right: 0rem;
+  }
   .menu-button {
-    top: 16px;
+    top: 0px;
     left: auto;
     right: 16px;
   }
 
   .menu-links {
     font-size: 2.5rem;
+  }
+  .subbar-menu {
+    display: none;
   }
 }
