--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,25 @@
+@font-face {
+  font-family: "Inter";
+  src: url("./../fonts/static/Inter-ExtraLight.ttf");
+  font-weight: 100;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("./../fonts/static/Inter-Medium.ttf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./../fonts/static/Inter-Medium.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./../fonts/static/Inter-Bold.ttf");
+  font-weight: bold;
+}
 /* GLOBAL */
 p {
   font-family: "Inter", sans-serif;
@@ -7,6 +29,26 @@ a {
   text-decoration: none;
   color: white;
 }
+
+button {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 20px;
+  gap: 24px;
+  background-color: black;
+  color: white;
+  width: 7rem;
+  height: 3rem;
+  border: 1px solid #ffffff;
+  border-radius: 80px;
+}
+button:hover {
+  cursor: pointer;
+}
+
 /* HEADER */
 
 .header {
@@ -16,13 +58,12 @@ a {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .header-left {
   display: flex;
   align-items: center;
+  padding-left: 7rem;
 }
 .header-right {
   padding-right: 2rem;
@@ -59,6 +100,28 @@ a {
 .welcome-image {
   width: 40rem;
   display: block;
+}
+.welcome-video-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 50%;
+  padding-top: 10rem;
+  padding-bottom: 5rem;
+  color: white;
+  justify-content: space-around;
+}
+.welcome-video-container-left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.welcome-video-container-right {
+  width: 30%;
+  display: flex;
+  justify-content: right;
+  padding-right: 5rem;
 }
 
 /* FOOTER */
@@ -126,6 +189,11 @@ a {
   display: flex;
   flex-direction: column;
 }
+.column p {
+  line-height: 0.8;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
 
 .footer-bottom {
   display: flex;
@@ -159,24 +227,22 @@ a {
 }
 
 .column p:last-child {
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
 
 /* YOUTUBEVIDEO */
 .video-wrapper {
-  position: absolute;
   right: 0;
   bottom: 0;
-  width: 30%;
-  height: 30%;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .video-container {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
   height: 0;
-  overflow: hidden;
+
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .video-iframe {
@@ -204,24 +270,30 @@ a {
 /* PROJECT */
 .card {
   max-width: 550px;
-  padding: 1rem;
+  margin: 1rem;
 }
 
 .card-image-container {
   position: relative;
   z-index: 1;
 }
+
 .card-image {
   position: relative;
   border-radius: 16px;
-  overflow: hidden;
   width: 35rem;
   height: 25.5rem;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .card-image img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  min-width: 35rem;
+  border-radius: 16px;
 }
 
 .index-number {
@@ -231,6 +303,12 @@ a {
   font-size: 10.5rem;
   transform: rotate(270deg);
   color: white;
+  font-weight: 100;
+  color: transparent;
+  -webkit-text-stroke: 1px #ffffff; /* for WebKit browsers */
+  text-stroke: 1px #ffffff; /* for other browsers */
+  font-weight: bold; /* adjust this value to set the desired font weight */
+  font-family: sans-serif; /* adjust this value to set the desired font family */
 }
 
 .card-title {
@@ -253,15 +331,6 @@ a {
   display: inline;
   font-size: 1rem;
   color: white;
-}
-
-.yellow-dot {
-  display: inline;
-  width: 0.5rem;
-  height: 0.5rem;
-  background-color: #e5e548;
-  border-radius: 50%;
-  margin-right: 0.5rem;
 }
 
 /* SIDE MENU */
@@ -354,24 +423,26 @@ a {
 
 .menu-links a:hover,
 .menu-links a:focus {
-  color: #e5e548;
+  color: white;
   text-decoration: line-through;
   text-decoration-thickness: 3px;
-  text-decoration-color: #e5e548;
+  text-decoration-color: white;
+  transition: all 0.3s;
 }
-
+/* this gives line to the chosen menu up + down */
+/*
 .menu-links a::before,
 .menu-links a::after {
   content: "";
   position: absolute;
   width: 100%;
   height: 3px;
-  background-color: #e5e548;
+  background-color: white;
   visibility: hidden;
   transform: scaleX(1.5);
   transition: all 0.3s;
 }
-
+*/
 .menu-links a::before {
   top: 0;
   left: 0;
@@ -400,15 +471,11 @@ a {
   padding-right: 20rem;
 }
 
-.graphics {
-  /* Add styles for the graphics container here */
-}
-
 /* responsive styles for mobile */
 @media (max-width: 768px) {
   img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
   }
 
@@ -416,21 +483,26 @@ a {
     flex-direction: column;
     align-items: flex-start;
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 10rem;
     width: 100%;
     padding-left: 0px;
     padding-right: 0px;
   }
 
   .header-right {
-    padding-right: 0;
+    display: none;
+  }
+  .header-left {
+    padding-left: 1.5rem;
+    padding-top: 1rem;
+  }
+  .header-left img {
+    height: 1.5rem;
   }
 
-  .footer {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .footer-top {
+    width: 100%;
   }
-
   .footer-top,
   .footer-middle,
   .footer-bottom {
@@ -445,7 +517,7 @@ a {
 
   .welcome-text-container {
     position: static;
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
@@ -454,22 +526,40 @@ a {
   .welcome-image {
     width: 100%;
   }
-
-  .card {
-    max-width: 288px;
+  .welcome-video-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0px;
+  }
+  .welcome-video-container-left {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 0.5rem;
+    padding-bottom: 2rem;
+  }
+  .welcome-video-container-right {
+    width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .card-image {
-    max-height: 376px;
+    width: auto;
+    max-height: 50%;
   }
 
   .card-image img {
-    width: 100%;
+    width: auto;
+    max-width: 100%;
   }
 
   .index-number {
     font-size: 6rem;
     bottom: 20px;
+  }
+  .card {
+    width: 100%;
   }
 
   .card-title {
@@ -478,9 +568,6 @@ a {
 
   .latest-projects-content {
     flex-direction: column;
-  }
-
-  .welcome-image {
     width: 100%;
   }
 
@@ -498,11 +585,16 @@ a {
     justify-content: space-around;
     align-items: center;
     padding-right: 0rem;
+
+    width: 100%;
   }
   .menu-button {
     top: 0px;
     left: auto;
     right: 16px;
+    height: auto;
+    width: auto;
+    padding: 0px;
   }
 
   .menu-links {
@@ -510,5 +602,8 @@ a {
   }
   .subbar-menu {
     display: none;
+  }
+  .contact-us-container button {
+    background-color: white;
   }
 }
