--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -101,7 +101,7 @@ button:hover {
   width: 40rem;
   display: block;
 }
-.welcome-video-container {
+.welcome-second-container {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -111,13 +111,13 @@ button:hover {
   color: white;
   justify-content: space-around;
 }
-.welcome-video-container-left {
+.welcome-second-container-left {
   width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.welcome-video-container-right {
+.welcome-second-container-right {
   width: 30%;
   display: flex;
   justify-content: right;
@@ -261,10 +261,13 @@ button:hover {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.latest-projects-content {
+.cards-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5rem;
 }
 
 /* PROJECT */
@@ -291,7 +294,7 @@ button:hover {
 .card-image img {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   min-width: 35rem;
   border-radius: 16px;
 }
@@ -406,9 +409,13 @@ button:hover {
 }
 /* padding-left positions the menu text from left edge */
 .menu-links {
+  padding-top: 10rem;
+
   font-size: 4rem;
   line-height: 1.5;
   padding-left: 10rem;
+  font-family: "Inter";
+  font-weight: bold;
 }
 
 .menu-links a,
@@ -428,6 +435,7 @@ button:hover {
   text-decoration-thickness: 3px;
   text-decoration-color: white;
   transition: all 0.3s;
+  color: grey;
 }
 /* this gives line to the chosen menu up + down */
 /*
@@ -470,6 +478,15 @@ button:hover {
   position: relative;
   padding-right: 20rem;
 }
+.social-links a:hover,
+.social-links a:focus {
+  color: white;
+  text-decoration: line-through;
+  text-decoration-thickness: 1px;
+  text-decoration-color: white;
+  transition: all 0.3s;
+  color: grey;
+}
 
 /* responsive styles for mobile */
 @media (max-width: 768px) {
@@ -500,14 +517,20 @@ button:hover {
     height: 1.5rem;
   }
 
-  .footer-top {
-    width: 100%;
+  .footer {
+    padding: 0px;
   }
   .footer-top,
   .footer-middle,
   .footer-bottom {
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100%;
+  }
+  .footer-top img {
+    width: 100vw;
   }
 
   .welcome-container {
@@ -526,20 +549,20 @@ button:hover {
   .welcome-image {
     width: 100%;
   }
-  .welcome-video-container {
+  .welcome-second-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-bottom: 0px;
   }
-  .welcome-video-container-left {
-    width: 100%;
+  .welcome-second-container-left {
+    width: 90%;
     padding-left: 1rem;
-    padding-right: 0.5rem;
+    padding-right: 1rem;
     padding-bottom: 2rem;
   }
-  .welcome-video-container-right {
-    width: 100%;
+  .welcome-second-container-right {
+    width: 90%;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
@@ -550,8 +573,12 @@ button:hover {
   }
 
   .card-image img {
-    width: auto;
-    max-width: 100%;
+    min-width: auto;
+    object-fit: cover;
+  }
+  .card-text-container {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .index-number {
@@ -560,14 +587,17 @@ button:hover {
   }
   .card {
     width: 100%;
+    margin: 0px;
   }
 
   .card-title {
     font-size: 1rem;
   }
 
-  .latest-projects-content {
+  .cards-container {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
   }
 
@@ -575,9 +605,14 @@ button:hover {
     width: 100%;
     height: auto;
   }
+  .menu-links {
+    font-size: 2rem;
+  }
+
   .side-menu {
     display: flex;
     flex-direction: column;
+    padding: 0px;
   }
   .social-links {
     display: flex;
@@ -585,7 +620,7 @@ button:hover {
     justify-content: space-around;
     align-items: center;
     padding-right: 0rem;
-
+    font-size: 1.5rem;
     width: 100%;
   }
   .menu-button {
@@ -599,11 +634,36 @@ button:hover {
 
   .menu-links {
     font-size: 2.5rem;
+    font-family: "Inter";
+    font-weight: bold;
+    padding-top: 0px;
+    padding-left: 1rem;
   }
   .subbar-menu {
     display: none;
   }
   .contact-us-container button {
     background-color: white;
+  }
+}
+@media (max-height: 800px) {
+  .side-menu {
+    justify-content: flex-start;
+  }
+  .menu-links {
+    font-size: 2rem;
+    padding-bottom: 0px;
+  }
+  .social-links {
+    padding-top: 0px;
+  }
+  .space-maker {
+    display: none;
+  }
+}
+
+@media (max-height: 600px) {
+  .menu-links {
+    font-size: 1.5rem;
   }
 }
