--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -268,12 +268,54 @@ button:hover {
   justify-content: center;
   align-items: stretch; /* Add this line */
   padding-bottom: 5rem;
+  /* Adjust the container height if necessary */
+  height: calc(100% - 50px);
+}
+
+/* ARTISTS */
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav-button {
+  background-color: transparent;
+
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.page-indicators {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.page-indicator {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ccc;
+  margin: 0 5px;
+}
+
+.page-indicator.active {
+  background-color: white;
+}
+
+.mobile-card img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* PROJECT */
 .card {
   max-width: 550px;
   margin: 1rem;
+  height: 60rem;
 }
 
 .card-image-container {
@@ -285,15 +327,16 @@ button:hover {
   position: relative;
   border-radius: 16px;
   width: 35rem;
-  height: 25.5rem;
+  height: 26.25rem;
   display: flex;
   justify-content: center;
   overflow: hidden;
 }
 
+/* this element controls the height of an image */
 .card-image img {
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   object-fit: cover;
   min-width: 35rem;
   border-radius: 16px;
@@ -301,6 +344,27 @@ button:hover {
 
 .card-text-container {
   min-height: 150px; /* Add this line */
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 22; /*Limit to 15 lines */
+  -webkit-box-orient: vertical;
+  cursor: pointer;
+}
+.card-text-container.expanded {
+  -webkit-line-clamp: unset; /* Remove line limit when expanded */
+  max-height: 70vh; /* Set a maximum height */
+  overflow-y: auto;
+}
+.card-text-container.expanded::-webkit-scrollbar {
+  width: 8px;
+  background-color: transparent;
+}
+
+.card-text-container.expanded::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
 }
 
 .index-number {
@@ -504,7 +568,7 @@ button:hover {
     flex-direction: column;
     align-items: flex-start;
     padding-top: 1rem;
-    padding-bottom: 10rem;
+    padding-bottom: 2rem;
     width: 100%;
     padding-left: 0px;
     padding-right: 0px;
@@ -573,18 +637,29 @@ button:hover {
 
   .card-image {
     width: auto;
-    max-height: 50%;
+    height: auto;
   }
 
   .card-image img {
-    min-width: auto;
+    width: auto;
+    height: auto;
     object-fit: cover;
+    min-width: 40%;
   }
   .card-text-container {
     padding-left: 1rem;
     padding-right: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 15; /* Limit to 15 lines */
+    -webkit-box-orient: vertical;
+    cursor: pointer;
   }
-
+  .card-text-container.expanded {
+    -webkit-line-clamp: unset; /* Remove line limit when expanded */
+    height: 100%;
+  }
   .index-number {
     font-size: 6rem;
     bottom: 20px;
