--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -288,8 +288,8 @@ button:hover {
   cursor: pointer;
 }
 .artists-cards-container {
-  height: 50rem; /* Adjust this value based on your needs */
-  overflow-y: auto; /* Add a scrollbar if the content overflows the container */
+  height: 55rem; /* Adjust this value based on your needs */
+  overflow-y: hidden; /* Add a scrollbar if the content overflows the container */
 }
 .page-indicators {
   display: flex;
