--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -457,40 +457,15 @@ button:hover {
   outline: none;
 }
 
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-  content: "";
-  display: block;
-  width: 32px;
-  height: 3px;
-  background-color: #000;
-  transition: all 0.3s;
-}
-
-.hamburger::before,
-.hamburger::after {
-  position: absolute;
-}
-
-.hamburger::before {
-  top: -8px;
-}
-
-.hamburger::after {
-  bottom: -8px;
-}
-
-.menu-button.open .hamburger {
-  background-color: transparent;
-}
-
-.menu-button.open .hamburger::before {
-  transform: translateY(8px) rotate(45deg);
-}
-
-.menu-button.open .hamburger::after {
-  transform: translateY(-8px) rotate(-45deg);
+.menu-button-hamburger {
+  position: fixed;
+  top: 50%;
+  left: 16px;
+  z-index: 1000;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
 
 .side-menu {
@@ -852,9 +827,6 @@ button:hover {
     width: 100%;
     height: auto;
   }
-  .menu-links {
-    font-size: 2rem;
-  }
 
   .side-menu {
     display: flex;
@@ -871,19 +843,24 @@ button:hover {
     width: 100%;
   }
   .menu-button {
+    display: none;
+    /*to return to previous state, take css from menu-button-hamburger without rotate */
+  }
+  .menu-button-hamburger {
     top: 0px;
     left: auto;
-    right: 16px;
+    right: 2rem;
+    top: 1rem;
     height: auto;
     width: auto;
     padding: 0px;
+    rotate: 90deg;
   }
-
   .menu-links {
     font-size: 2.5rem;
     font-family: "Inter";
     font-weight: bold;
-    padding-top: 0px;
+    padding-top: 5rem;
     padding-left: 1rem;
   }
   .subbar-menu {
@@ -911,7 +888,7 @@ button:hover {
     width: 100%;
   }
 }
-@media (max-height: 800px) {
+@media (max-height: 850px) {
   .side-menu {
   }
   .menu-links {
