--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -271,10 +271,14 @@ button:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: stretch; /* Add this line */
   padding-bottom: 5rem;
-  /* Adjust the container height if necessary */
   height: calc(100% - 50px);
+}
+
+.cards-past,
+.cards-future {
+  width: 30%; /* On mobile, each column will take up the full width */
+  flex-direction: column;
 }
 
 /* ARTISTS */
@@ -692,6 +696,11 @@ button:hover {
 
 /* responsive styles for mobile */
 @media (max-width: 768px) {
+  .cards-past,
+  .cards-future {
+    width: 100%; /* On mobile, each column will take up the full width */
+    flex-direction: column;
+  }
   img {
     max-width: 100%;
     max-height: 100%;
