--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -270,7 +270,7 @@ button:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   padding-bottom: 5rem;
   height: calc(100% - 50px);
 }
@@ -701,6 +701,9 @@ button:hover {
     width: 100%; /* On mobile, each column will take up the full width */
     flex-direction: column;
   }
+  .cards-future {
+    padding-left: 0px;
+  }
   img {
     max-width: 100%;
     max-height: 100%;
@@ -826,7 +829,7 @@ button:hover {
   }
 
   .cards-container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     width: 100%;
