--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -95,7 +95,7 @@ button:hover {
 
 .welcome-image {
   height: 100%; /* Scale the image to fill its parent height */
-  object-fit: cover; /* Preserve aspect ratio */
+
   object-position: center; /* Center the image */
 }
 .welcome-second-container {
@@ -259,12 +259,20 @@ button:hover {
 }
 
 /* LATEST PROJECTS */
+.academy {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 
 .latest-projects-container {
   display: flex;
   flex-direction: column;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 15rem;
+  padding-bottom: 215rem;
 }
 .cards-container {
   display: flex;
@@ -325,11 +333,13 @@ button:hover {
 }
 
 /* PROJECT */
+
+/* was padding-bottom: 5rem */
 .card {
   max-width: 550px;
   margin: 1rem;
   height: auto;
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
 }
 
 .card-image-container {
@@ -405,10 +415,10 @@ button:hover {
   color: white;
 }
 
+/* padding: 1rem 0;*/
 .card-description {
   font-size: 1rem;
   color: white;
-  padding: 1rem 0;
 }
 
 .card-event-production {
@@ -422,6 +432,14 @@ button:hover {
   color: white;
 }
 /* ABOUT US */
+.arrow-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding-bottom: 2rem;
+}
+
 .about-us-container {
   display: flex;
   flex-direction: column;
@@ -446,6 +464,8 @@ button:hover {
   width: 50%;
   flex-direction: row;
   flex-wrap: wrap;
+
+  justify-content: center;
 }
 /* SIDE MENU */
 
