--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -432,6 +432,10 @@ button:hover {
   color: white;
 }
 /* ABOUT US */
+.about-us-header {
+  font-size: 4rem;
+  font-weight: 700;
+}
 .arrow-container {
   display: flex;
   justify-content: center;
@@ -759,7 +763,7 @@ button:hover {
   .footer-bottom {
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 0px;
+    padding-left: 5px;
     padding-right: 0px;
     width: 100%;
   }
@@ -773,6 +777,11 @@ button:hover {
   }
   .about-us-team {
     width: 100%;
+    justify-content: center;
+  }
+  .about-us-header {
+    font-size: 1.5rem;
+    display: flex;
     justify-content: center;
   }
   .welcome-container {
